--- a/template/index.html
+++ b/template/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="/st/style.css?4">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
+    <script type="module">
+        import { FilesetResolver, FaceDetector } from 'https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0';
+        window.FilesetResolver = FilesetResolver;
+        window.FaceDetector = FaceDetector;
+    </script>
 </head>
 <body>
     <div class="container">
@@ -148,7 +152,7 @@
         </div>
     </div>
 
-    <script src="/st/app.js?9"></script>
-    <script src="/st/features.js?7"></script>
+    <script src="/st/app.js?10"></script>
+    <script src="/st/features.js?8"></script>
 </body>
 </html>
